// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PopOver should match snapshot 1`] = `
<div
  className="dbzfGp"
/>
`;

exports[`PopOver should match snapshot when visible 1`] = `
<div
  className="bqoXdg"
/>
`;

exports[`PopOver should match snapshot when visible and without borders 1`] = `
<div
  className="fBMBDA"
/>
`;
